--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
       <div class="brand"><h1><span>Б</span>аттөр <span>Ц</span>эрэнлхагва</h1></div>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
+          <a href="https://m.facebook.com/profile.php?id=100010411207719&tsid=0.8509000112932406&source=result"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
+          <a href="https://www.instagram.com/_tseeku_/"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
         </div>
       </div>
     </div>
